Actualizar `Conexion` y métodos auxiliares para mejorar validaciones, manejo de excepciones y soporte de premios por décimo; incluir nuevos tests y refinamientos en logging.